--- a/Artzy/WindowsFormsApp1/frmCadastro.resx
+++ b/Artzy/WindowsFormsApp1/frmCadastro.resx
@@ -555,6 +555,112 @@
         p+XT8n+vLLfcfwE1CBTUGkmlUQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFYAAAA3CAYAAACW/r0IAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAF39JREFUeF61m1lwVUd+xj0Zb4OXiT12Yo+TiT1JZiaeJTN2Kok9mRk/pCp5yEPy
+        4EpV8pBKeRlvgI0HbGxWY2PMvoPYJEBoAYEEEghJaEcLkgxYCN1NAoMxYMBxpea9O9/37+5z+/Q9V+CM
+        51Z91X26+557z+9+59//7iPdlPn0mhr95Ko+ff6KHvnkqho+d0Wf/PiKPn7uqhpCOXD2ij525oruh/qg
+        3jNX1dHxK7p77IrugjqhDirH8qpqt2rDcYGypmzPxft5LG3od6WrF+vz5fdPNEb6cle/aM9eOYF6bef4
+        51Pbc5eeuun38To4lNEHBjNq37GUrulP6eq+tCrvSekdR9NqW3dKbe5O6Y2do3pd+6he0zaqV7Wn1PLW
+        lF7WmlJLjqTUB9D7LSm9sDml34PehRYk6J3mtEpqp6K+JtQhlk7SF7RJe1NK2tnv6qLmdMFY185x77ek
+        9arOMb2ue1yXD57T9acuEvzZ9rFrpV8p5HoBmwXYtN7dl9JVvWlNsGUAuxVQN3el9YbOlFpLsB0ptRJg
+        ATUPFlAXHUkrgn23BRfoAUvSRIBFgBADlaCkfvcDRH2HR6P2qM3Clbp3vKQtq0p6z+jG0UuAfLnjKwFc
+        P5TVdYMZvW8go+BWXQmwO3vSugxQAVaVdKYs2JReDa1sS6mlALv0SEovBlSCfR9A3gNUOnZBMy7IBwVN
+        BDPW5y4Y8gFI3YK6Ebn3hueIQfYUjUf/pt4zqnH0ska4KO07+8XDFtOXfwGsqh3IIAzAsf0ZVQGoCAO6
+        tDutt3SldAm0viOl10IAq1YALB27tDXNMKA/sG6NwkBLHOI7zfjSwXFR0MUumFA8ILE6z2Xa4uPz7QYo
+        xbp37M7hy40rO/YxQ8QX7bkrr1pUX+5VP5RTtccyek9/RlfBsRVwLMFuI1iJrym9jmDh1lVtKc34SrfC
+        tSYMIGYxxr4HoElgnULAiUq4UF/FYFxPAOVKfAdz+8fabN3J9qvFrRl9OHUZk95n84Dqa4bYDb72D2Z1
+        7UCWYFVVXwZgM2o7XFuKGCsTFx3bmVZrTBiIwC5uGTVhAFoImAwFBGsmr2S4FC/onSYTLgSU6wsuLlQS
+        gFAOSFIfVaxPvpP3o/nn4WS35+QFurcMuP4AujHAFqzEV05cuwzYaOJyjgVYtRJQJSPApMWJa5EDCzAO
+        bASQt5Tn0hCm6zOhwY4LLtCXf7Fhe9hW0O5cWgReKNfuj686/omDe2Ng6wZzei9CAeKrruzLINXixCWh
+        QG2CNnSmBSwnLsRXvbwtrehYm2rJxGXA4kvkswILLQ83BtBTrM27sBBwMeCUg+QU9tnSF8eFbZFkfMJk
+        WTt8Ubdmr6zUWl8fbh0cW4NQUA2wCAOSEXDi2goJ2K60WtuRNhlBe9pNXAasday4NeZY5JK2HsIUQLb0
+        +yYCF8m7WABIBCifHbaZunwGUitTt8dRPVD4fophgTG3ZfTia0D3NQA2EJNecKzac4xgs7oCMXZHT8aA
+        RYwtAdj1gGrApl1GwDCgF0MMBSa+2omrmPjFvOMk5/oX4C7Idw3bwgv1+6K6/GDmR3LtBFI+dF53jV/T
+        vWc/p+vkGP1G+ByW81HON58TneedJoFvPvsw7lRMaM3pK//TMHzuu3Pnzi0ec+sGxwRsVV+W8VXAbuvO
+        0LGqBG7FxEWwiisughW3Ai5zWAMW+WsS2Cim4ktZJR07ybG9IAcpEmNkwq3pJBftlSILa8PRccZG3XPm
+        WkwEzJTKwDOfK6UvgCRMlMqr433neM4O4CsOdh8zAgNWVfRm1fajBJvWm6GNALsOYBkGVtGxJhSIY22q
+        ZXJYgoU8UBaiu+3tsYXt5GC62zcRarF275Z3ckBYX9GR0wdPXxKATj5Uqil9GQ4dVXRqDKiTBem0oIk/
+        MJ2dwiLikm44nvlHICTcwtc+TF67j+VUJRxbDsduh2O3wrGbITNxASxEsMsweXHVJY7FwsBNXO9itTVR
+        KPCB5mEbWCxxEYlAQ3Gc/76CfgDibc8Z3AH0Qfp1qnPsqp538JSe3zhiQgChudK6NCxFCA+rOsZ0a/oy
+        XXszVOjafYNjBIuMIKvKe7O6DI4l2E0E25Wxjk0jI0jr5YC7FFkB46tbysZWXcaZ5uIFHut5sS2uKFkv
+        Cva6ML33lg2ci+KogKQCl/qqP3VBzT5wQs9tHAE0uNaB8wC6egys7ePSt2Egcm0c7l6ArTZg9c7enCoN
+        wNqJS8CajIBu5VI2pThxUUFGEDnSwAS8Aqjx29hNHtExSwOdMhctP0AcrHvP2u5xfRC3ZhI8p5hzbbmk
+        8YR6u3ZQz2n4qMCpoVwY8GEz1jaPfLoGGAtdWzMwpqsAtqI/p3b0ZLHiymIpm9El0PqurF7bmcHEZcDa
+        NEsvbk1HiwN/q/BdAovgWRFA5FhCJnDrQAuG0FhGsiBdX8ypFjjr7rYPwSXJ9bOsP3lOL6jp0q+Xt6uZ
+        Nf16Tv1JPf/QaZw3jXibEjl4MZi239UX4ru0Zq58AYy3QV8XoO61h2CRau3qy+ntCAWlPVm15WgWqRbD
+        QEavsfF1eVsGjkUeSLCMry4jEKC84NCV+HCvLaw7YA6Sg5hUxiSQR3Hbfywx0gfmww2PqfbMZb1if49+
+        Yc0e/crmBvX6zlb9JsEeOKnnNY7KHRED6ckB9aGzXj9ySdf0jPzT448/fgtw5l0LsKqyP4eJKwuwObUN
+        juXEVdKV0QZsRmFhgKWsdWxrBguDtGy+mInLggXkPDgTDnwZ1xqQApmlA0enO3DSbx0N5/rt1JquMd2U
+        uhwDRoUQw+NNzUP6pTW71XMrKvQL6/epKVsb1W/K2/XMvccYCtT8RjjWAnOKbn/Id6pro8oHz6sDQ7k3
+        gPJW5rXRqmw3HFsJt+6UiSuL+Jp18VXAMr6ubM/QsZLDwq2Ir5loYZB3rMz8yXDhsMixAagkV8baLPSl
+        WDHtP3UxBosKAYbte5FOztp+SD+7fJd+fmWVfmHdPkW3vlbWrN+o7tGzaof03IOnBKzvRirJpWFfSc8Z
+        fWj4/C6g/MbTTz/NcGDAVgNshYDNMQxYsFm9HlARXwE2Yycu41iCNVuFaRNfYxOXkXOnq4dAk8CxzTk1
+        lL9qKgYyVBtu++V13fq5FbugCv386t36xXX79OTNDZpQZ1R2aUxcak493Ir4Or/RZAUE5jtVHJoQGpyW
+        tedUS+rSMFDeAd0SObb6GMGO6R0ES8cezTG+YuIi2KxajVAgYJFmLTFg1SLAXXgkYxwLwEmTlgOa39Uy
+        MF0ZKnQujuW9TPIJ0wca1sNjc9tXGZeuqgbQvfrlkgNq6tZGPW1Hq55R1a3f3otsALF1/iHksIDqwBao
+        0asL4Dxk/ghLWrMEex4ovwlxEjMLhuqBccWJS8D25BBfs7oEcNd35xTiK8OAlokLoYBgPwBUuhWhAI4t
+        AlVgMgMwcKXNuZHtdGcI0nOrS6829pxRDpgPzpUir33vQE5N33JAXCq3/doa/fLGOj1l80E9bXuLnl7Z
+        rWbu6dNv1x2nU7E4AFTACaEm3fpOUZ/nYi6ZgfIe6HbIgK06No5Ua1xh4gLYMbUZUDcizVoH+WCXQgBr
+        VlwWLJexFmwEMC8DPMmhhOjACuQgBBAsV0M7j50tAJqkjuxlvWhPuzj0uZWV5rZfj9t+E2770mbNSerN
+        3X3qrdohNXv/CbPasrd/DKq97QVe0u1v20Lwbdmr+q677roPOL8BmbSrEqGgvH/MZgRwLMF2Z22qZcDC
+        rQIW+SufyNr4WtyxvgjWByngApAinseU+NKjmFCG9daeMQE3EVTn3OaRC3pJbbfijP/yxv166rbDinnq
+        jMpu/RZm/ll1x/Xc+mGCLHCoE4H5+wFRXwg0gI5clo79I+gOO4ER7DjBqjI4FvFVJq4N0LrOrF7dkdUr
+        6FhkBQwDSxAOJL5yYUDHBlD9Wz/f5t3idKdNoVCP2ixQaWMYwQwtk8rc2gG48bMYRB9qkg4On9ezqjr1
+        9IpO5qhqVu2HWADwtueeQDDzB8BifaEwNhzH8j185yPpy/975513CtinnnrKrMLo2J2YvMp6x+gQtQmO
+        FbAIBZi4BCzdurQ1I/HVgM3HWPPwkMKHh2AtPAcwgmiPo9K6VcYA/LxDp9Ssug9lkplfc1Q3n/40cqYD
+        eD3I1UNn9cLG4SiVikEKFAPqASzoS9DKjpxuGrk4ApgPQHdCFizCwE5ABVjlHGuWslmsuMStJhRYsBD3
+        B0yMFcc6WZgeVB+kfxyWUrfOfufwaT2vYZipkJ6+q0NP3XoIuedevf7wYMFE5isJOje0S/vPRhASIQW3
+        dWKblxkwVMh57Bj+RU39h+NNCWDHjWN7xhEK4NjuHEJBTglYhIIYWIQAWXEx1QJMC7bg9newfCXG1UAA
+        DSG+AuysuiE1Hbnm1NLDihMRJ6WpG/bqsvaPIvdGskB9qK6kOGtv6TWAZcICmBjkwKUyLulHcPLAY+Wl
+        dzb1LwDMP46BrbCORUagtwBqCUTHruvKqdWdOUWwJiPA5GUnLhcG8o4FmAAq3ZjkUJnIKK/flw0FejZC
+        wRt7+tS0HUf0K5vqJXVCTqo487+9/ZBqGjF7rj7A66nm5AVcQ7YAzoSy48LdLeda7hUsKin/Dwt2UrT6
+        wuSl6FgBC8cSrHMsJi/lYuwSLGO5lF0EtwZgC9Mlr26PCdHUORbvi5W2nWMoxkTuODEccFZ/bfsRRbhM
+        9H+9ulo/i5XUM8vKJcXyAd8IZI7ZCZfFABGYlX9c1LV4L0EvBg9kIxcA8s/d5AWZrICO3QGw2wRsTm+k
+        YyEXCla0ZyUMEKxbynK7jFBjjnXgrFzdg2YcyvGuzUK1Yw1oO24e8tjZDSeRew6qGdVH1es727ByOqRf
+        3lAnu1PPr8LKakWFcuHBB+dKP0SE/aX9H0dhgbDC0onHUZv9MZy4T1DTe7oWGB9BHvstlPk8VsAiFPhg
+        ZXHgYqyNrwwFzrHvtWRkYfBuc8ZCwgdbUNwwjp50BnJALUjKwLZ9tl2OeY55TLsOfiSb0VwxMYXiOn8K
+        1vsvr6/VL6zeg1VWpQB+FYC54eLDc3Un10bJYxmcPzGnBUAfcAy27aP4BGHOqi3/BYzfgbjyyi9pseqK
+        wHLykuVsV07AMsa6iYu2J1jfscatxrEC1oBJlu230J2Sxkbt8jgaYUFibj3cu29AdqSQ+OtXy5rVZISH
+        l9bXql+v3q2eW1mlnlm2S7+/py0KDz5IX66Pk+S8QyP4LMDyAXvworZAJT1n1YEPxwaB8AfQt++55x7Z
+        K4g2YQiWy1nn2BLAXQfXRo7F4sDuw0q6hfgqT2ThWgs3w1vYd2FMxdzr2ov1O8kTVE5oh08rrMYk4X+r
+        pl92pyQ8YIX1ysYD+kVObiur9HPLEX+Xluu1DX3JcM8YtaQu61n7j8t+Ac9PWFEqRcj+be/X7THdOnPJ
+        umeA8C+hB+6//35mBPnN7gpMXgWhwMRYtbojh8krC7CMsd4GTIJjbxRs7Ni5PMHt7o8nIgncUcUV1Fys
+        pLCAUFxZTa/oVtPKWmSj5eUN+xWyByWAV1Qy/ioXfwWyhcrj5Y0nNPcO5jZgAYHzxsCF8sASPJ91VXef
+        OgB8P7r99tv/DCXj6yTIxFe+uKTd2TeuTFbg0i04Fm5dhYkrirGA6u8TvIs4K0DhWG8/IA/GAoyBtMdh
+        X2xMAuSYCBixkSsqbqi8vW9QwsNvdnWoV7c16cklEh4k/j6P3PdZhIfpW+vV3mNZCRF8Kr2gplv2EWbu
+        6UeISX56QEmKZaG6UMF0rQVL2H/9z//+l9tuu+37kyZN+jYwxrcM+SJYZgUeWCxp7QLBgWW6ZSYv2dki
+        2II8NgmCLw8YQfJ9xfqcoj5eqBtL8ULRz+dUjJOzcUu/tXdAvVF5VE/b0aanbmtSr5Qc0C8hPeN+rExw
+        3PlCmEA8Zl6spiGMvIkJUXa7+LyLnyGfk5+4ohhLuNBCmIkhYH3N4WVA9xPoEaRZ96PM7xG4V5AVSB7r
+        soKVAOt2tvy9WImxNiMwrjX5KC66wLkFxwkSiBgXwbye5GJZ2skN4YGb1m/vG0L20I/soYsb2mrKFqZn
+        +/nkQEIEob64lk8RDmIC7FAza47p2dzsto6daLJi3+4TF/SW+o7NwPYY3YryIegPofw+rHs5sKW942oz
+        oNqVlwJYFe3FMhTwISLBAmLercapTrzYmNNsm68CeBxnx7LPf7/UeWHhudhGF3lreNyqiL8jag7DA2In
+        3Kim70J6VtqspwLw5M0NcHG91KdtP8LwofhDmMzgNL4/zGHP5c7vg6768BNd1XHiIJD9LfRjxNZHUIpb
+        Ibo1/ooWCAgDsvKS5axswkRgl7VllcsKJBREG9z5BN+HWyBC4sxr6wX9gaKxYbsDbeXfslJHP9OneQ1I
+        zw4wPRtUb+7uVTPgYGQQ+vUdrYzFekZVj8CXx97u0Yw7h3d+uf1xnbXDF1VVx3FC/XvopxAzgeTY6l5c
+        0sZjrNndip4eSLplHMuVFyYwedZFsAIXF+wARxcfwHMuDEsqFmsp773s88eKvIuOXMW6bRdIuLXp4DkN
+        w2p23XGZ4HjbQwqxWJ7Mmr8lwAKBGYF7P0rfuYtbsxJTtx/uq7755pufAK7HIOatfwrdCzETiMdW93IL
+        BIBV3iaMPO+SbcMwFABufEkbdytBhDAmdGBCPZR/TinthU8kM4tzQwcOZgxGiiab50iv5Pa3qy7n1NCt
+        /BPPxpFPf7uq4sBqQH3ylltueRy4HkUI4L8oIW2VvPVWiH+AXAiW24bWsYqhQJ53YeJai1WXday3pAVU
+        OjYBqoBNus2LtBWA9MaFffFj4y4fiIPiw3F1fi8HMLrtCd07D+tuPP9rsXH0M1U3kDn+z//2708DkTj1
+        1ltv/aGNq9xsuRu6bcI/PGaMZR4rS1rAZbpFsMxjoxgLt/qbMA6sg4sLjmJtIsiJ2n25MSyD8YTL29TJ
+        h5ekCfsCsHy8UjZwDrf9Z5pAp8xZNBku/TnwPEGnAuqjqEdQH374YWYBX090qnvJyqtvTB4kSiiAY9f7
+        YBFjlyHWyLYhwQImwUpclVTLOhZtADBh2lTUpe49wXtj4x0UgHDQkuBFbZ4LRcggeExzLGvHdfackT8P
+        4n5qy+il35Y2Ht09de4HU4DkF9CTEGd/TlR/BT18xx13cL/VTVYSVycE+9H5z/WJ85+roXOf68GPr+kB
+        qP/sNd0nS8Br6uj4Vd0tuqa6xq6qjtxV/ie1yP/vbe7SF8i1h/3FxlPmP7ST+0TBezOuzbX7/X67UePw
+        +Uv1x8/kytsGG1dX1K+ZPHshYf4S+gVjKcq/gzhJ/Ri5Kmf/79hH23dBEVTouq9f4oQ8caTw2LUF7fwi
+        sX6v/JVt56/vxkT14DwTCmN/NdF49vkK+v3Pj2THse8foJ/jmHGUQDlB/QS3Pl3KW//Bu+++m7P/nY8+
+        +ignKvN04EZeOOmTFKpR6SuprZi88zzxZd53PfFc9nwEEGv3j5MUjsExz8HYyZyUt/vfQD8FzB9BP4BL
+        v4vjP4EYT3nrM6UiVP4lIYobf9H2/KWcHmPAhtju97H9Z7YtJo5HKWM8FRz744Lzh5/p90Xv8cqi8s/B
+        eniM8mco/xolnflDlHTnX9hdqofs2p+b1lxRya3v/jxzwpgavvALfQ/F91jamCJ1lN+3bdLvy29DnWvm
+        WD8k5wkk5/Pb7Pn5fjmHdxz1u7rX5s7jv8d9XkGfq1uxzrEE+QjEnf+H7MT0rXvvvfdu5qec9e2miqRT
+        Xwqo93oQ4jNxJ3fM0ukBfLjf78bEjidNmvQgldRH2XNEY9yxlT9GzuX6XN0/t/d9YmNdG+scAxFa1G4f
+        +tGV3EOlM79pk30+r7rN/mV28fz0S7w428XEX26i41D33Xefq7txUrLd64vab+R8wftESe/zx7n+pPdC
+        hMeStzjjpoCEGD/pTk5M+b/I/l1f9heKiW2u3e/n7eEfJ733/9tepC/x84KxMoayt2/iuWwb+wWie/5v
+        QX41MIu8fpeT/16/GF7++b/sZ/2+v1vC66ab/g+PiiWgCCyeZwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>52</value>
   </metadata>
